# linux_learning

./: .gitignore  CMakeLists.txt  client  consumer  event_gen  proc.c  server  server_flag
include/: apue.h
src/: dup2.c  main.c  mycat.c
src/ch10/: 10.10.c  10.11.c  10.12.c  10.15.c  10.18.c  10.2.c  10.20.c  10.22.c  10.23.c  10.25.c  10.26.c  10.28.c  10.29.c  10.31.c  10.5.c  10.7.c  10.8.c  jumps.c  jumps2.S  jumps2.c  jumps_signals.c  test_sigprocmask.c
src/ch10/exercises/: e12.c  e2.c  e6.c
src/ch10/sys_prog/: 1_basic_signal.c  2_pause_hangs.c  3_intr_malloc.c  4_sigprocmask.c  5_sigaction_info.c  6_sigaction_mask.c  9_sigsuspend.c
src/ch11/: 11.10.c  11.11.c  11.12.c  11.14.c  11.15.c  11.16.c  11.2.c  11.3.c  11.4.c  11.5.c  demo.c  heapsort.c
src/ch12/: 12.13.c  12.16.c  12.17.c  12.8.c
src/ch13/: daemonize.c  fig13.1.c  fig13.7.c
src/ch14/: demo.c  fig14.1.c  fig14.12.c  fig14.27.c  fig14.7.c
src/ch15/: fig15.11.c  fig15.12.c  fig15.14.c  fig15.18.c  fig15.5.c  fig15.6.c  fig15.7.c
src/ch16/: clcconn.c  connect_oriented_client.c  connect_oriented_server.c  initserver.c
src/ch17/: cli_conn.c  open.c  open.h  serv_accept.c  serv_listen.c
src/ch18/: fig18.10.c  ttyname.c
src/ch4/: dir_traverse.c  fig4.12-chmod.c  fig4.16.c  fig4.23.c  fig4.25.c  fig4.3.c  fig4.9.c  file_hole_demo.c  link_demo.c  mycp.c  time_demo.c
src/ch5/: fig5.12.c  fig5.13_temp_file.c  fig5.15.c  fig5.4.c  fig5.5.c
src/ch5/yt_io/: bin_out.c  dir_list.c  file_rw_b.c  mem_print.c  read_array_struct.c  struct_serialize_json_simple.c  write_to_file.c
src/ch6/: time_demo.c
src/ch7/: fig7.11_set_jmp.c  fig7.13.c  fig7.9_cmd_process.c  long_jump.c
src/ch8/: dup2.c  fig8.1.c  fig8.12.c  fig8.16.c  fig8.22.c  fig8.28.c  fig8.29.c  fig8.30.c  fig8.31.c  fig8.6.c  fig8.8.c  incorrect_fork.c
src/ch8/exercises/: 8.7.c
src/ch8/proc_unix_yt/: wait_ex.c
src/ch9/: fig9.12.c
src/cool_examples/: cache_friendly_malloc.c
src/lib/: clrfl.c  error.c  lockreg.c  locktest.c  openmax.c  pathalloc.c  prmask.c  setfd.c  setfl.c  spipe.c  tellwait.c
src/misc/: struct_alignment  struct_alignment.c
src/sys_prog/8_net/: 2_getaddrinfo.c  3_client.c  3_server.c
src/sys_prog/advio/: 1_nonblock.c  2_flock.c  3_fcntl_lock.c
src/sys_prog/ipc/: 11_shm.c  12_sem_posix.c  13_sockpair.c  14_sock_dgram.c  15_sock_client.c  15_sock_server.c  1_simple_sort.c  3_mem_sort.c  4_fifo_server.c  5_key_t.c  6_msg_get.c  7_msgsend_client.c  7_msgsend_server.c  7_msgsend_server_flag.c  8_sem.c  9_sem_event_cons.c  9_sem_event_source.c  sock_client  sock_server  test_mem.c
src/sys_prog/proc/: 10_pipe.c  11_advanced_pipe.c  12_exec.c  3_fs_proc.c  4_shared_mem.c  multiple_pipes.c  pipe_ex.c  pipe_simulating.c
src/sys_prog/threads/: 10_cthreads_1.c  11_cthread_bad_detach.c  12_cthread_detach.c  1_clone.c  4_not_atomic.c  6_bad_lock.c  7_spin_lock.c  8_futex.c  clone.h  gcc_thread.c  simple_condvar.c  thread_stacks.c
src/sys_prog/users/: set_userid.c
